Restore logo padding to fix left-alignment

--- a/src/components/page/Header/Header.css
+++ b/src/components/page/Header/Header.css
@@ -19,7 +19,3 @@
 .breadcrumb a {
   color: #007742;
 }
-
-.header-logo-navbar {
-  padding-left: 0;
-}
